c4prj2_input/grade.txt
Grading at Wed Apr  3 01:32:21 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:19:13: error: unused variable ‘n’ [-Werror=unused-variable]
         int n=0;
             ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
